--- a/config.json
+++ b/config.json
@@ -16,12 +16,10 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "𝐂𝐘𝐁𝐄𝐑 ☢️_𖣘 -𝐁𝐎𝐓 ⚠️",
+    "BOTNAME": "NOBITA",
     "PREFIX": "/",
     "ADMINBOT": [
-        "100086680386976",
-        "100063460095373",
-        "61550035211214"
+        "61575826242805"
     ],
     "NDH": [
         "100082395531611"
